--- a/src/template/home.html
+++ b/src/template/home.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <body>
     
-    <h2>Home</h2>
+    <title>Home</title>
     
-    <form action="/search"  method="post">
-      <label for="Search">Search:</label><br>
+    <form action="/search"  method="POST">
+      <label for="Search">Search:</label>
       <input type="text" id="Search" name="Search">
       <input type="submit" value="Search">
     </form> 
